--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,26 @@
 {
+    "editor.formatOnSave": true,
+    "python.formatting.provider": "yapf",
+    "python.formatting.yapfArgs": [
+        "--style",
+        "{based_on_style: pep8, indent_width: 4, column_limit: 120}"
+    ],
+    "python.linting.pylintArgs": [
+        "--max-line-length=120"
+    ],
+    "python.linting.flake8Args": [
+        "--max-line-length=120"
+    ],
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/CVS": true,
+        "**/.DS_Store": true,
+        "**/__pycache__": true,
+        "**/.pytest_cache": true,
+        "**/build": true,
+        "**/dist": true,
+        "**/*.egg-info": true
+    }
 }
