--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,6 @@
         "**/dist": true,
         "**/*.egg-info": true
     },
-    "terminal.integrated.shell.windows": "C:\\WINDOWS\\System32\\bash.exe",
-    "editor.fontFamily": "Inconsolata-dz for Powerline, Consolas, Menlo, Monaco, 'Courier New', monospace",
+    //"terminal.integrated.shell.windows": "C:\\WINDOWS\\System32\\bash.exe",
+    //"editor.fontFamily": "Inconsolata-dz for Powerline, Consolas, Menlo, Monaco, 'Courier New', monospace",
 }
