--- a/tests/anat/script/kancolle/config.ini
+++ b/tests/anat/script/kancolle/config.ini
@@ -4,6 +4,9 @@ version=master
 [kancolle]
 app=com.dmm.dmmlabo.kancolle/.AppEntry
 
+[slack]
+channel=myrt_msg
+
 [expedition]
 fleet_2=2
 fleet_3=21
