--- a/.gitignore
+++ b/.gitignore
@@ -103,8 +103,8 @@ ENV/
 
 tests/**/log
 tests/**/tmp/*.png
-tests/**/tmp/evidence
-tests/**/tmp/evidence.*
-tests/**/tmp/video
+tests/**/tmp/**/evidence
+tests/**/tmp/**/evidence.*
+tests/**/tmp/**/video
 tests/**/report
 .lockfile
